--- a/flask_app/compose.yaml
+++ b/flask_app/compose.yaml
@@ -1,5 +1,33 @@
+name: ollama-rag
+
 services:
   flask-app:
     image: flask-app
     ports:
         - "5000:5000"
+    depends_on:
+        - ollama
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    network_mode: host
+
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/app
+
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    restart: unless-stopped
+    network_mode: host
+
+volumes:
+  ollama:
